# blogcode

./: .gitignore  CMakeLists.txt  README.md
custom_parser/: CMakeLists.txt  custom_parser.cpp
errors/: CMakeLists.txt  v1.cpp  v2.cpp  v3.cpp  v5.cpp
file_org/: CMakeLists.txt  ast.hpp  employee.cpp  employee.hpp  main.cpp
identifiers/: CMakeLists.txt  base_id.hpp  id_example.cpp
lexer/: CMakeLists.txt
lexer/v1/: CMakeLists.txt  lexer.cpp  lexer.hpp  main.cpp  parser.hpp
lexer/v2/: CMakeLists.txt  lexer.cpp  main.cpp  parser.hpp  test_main.cpp
parse_ident/: CMakeLists.txt  parse_ident_v1.cpp  parse_ident_v2.cpp  parse_ident_v3.cpp  parse_ident_v4.cpp
